# gorp-dsl

./: .gitignore  OpenExpert-Concept_Pitch.md  README.md  dsl2cp.py  dsl_concept.md  index.html  main.py  mock_trucking_demo.yaml  np_tester.py  nurse_schedule_demo.yaml  nurse_scheduler.py  pyproject.toml  vercel_lessons.md
