[project]
name = "gorp-dsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "neuralprophet>=0.9.0",
    "ortools>=9.14.6206",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
]
